# googletest-installer

./: README.md  action.yml  index.js  package-lock.json  package.json
.github/workflows/: test.yml
test/: CMakeLists.txt  test.cpp
